Closed
Bug 1503424
Opened 7 years ago
Closed 7 years ago
[10.10] Crash in -[ChildView initWithFrame:geckoChild:]
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla65
People
(Reporter: marcia, Assigned: mstange)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
pascalc
:
approval-mozilla-release+
|
Details | Review |
As noted in Bug 1491580, there are still users crashing in this stack running 10.10 - see https://bit.ly/2ETsrgW. Currently in 63 there are 200 crashes/90 installations. So far only 63 is shown as affected.
Updated•7 years ago
|
Flags: needinfo?(hikezoe)
Updated•7 years ago
|
Crash Signature: [@ -[ChildView initWithFrame:geckoChild:]]
Comment 1•7 years ago
|
||
Markus, all the crashes are startup crashes which is concerning, could this bug be prioritized and investigated? Thanks
Flags: needinfo?(mstange)
| Assignee | ||
Comment 2•7 years ago
|
||
That is concerning, yes. The crashes happen in this instruction:
> 0000000002334675 movq _NSWorkspaceAccessibilityDisplayOptionsDidChangeNotification_506d5d8, %rcx
> 000000000233467c movq (%rcx), %r8 ; <---- this dereference crashes
So that must mean that NSWorkspaceAccessibilityDisplayOptionsDidChangeNotification just contains a null string. That's surprising to me because the Apple docs say that this constant is available on 10.10+.
We could just add a null check and it should fix the crash.
Flags: needinfo?(mstange)
Flags: needinfo?(hikezoe)
| Assignee | ||
Comment 3•7 years ago
|
||
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/8104ed059167
Null-check NSWorkspaceAccessibilityDisplayOptionsDidChangeNotification before using it in order to fix a startup crash on 10.10. r=hiro
Comment 5•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•7 years ago
|
Assignee: nobody → mstange
| Assignee | ||
Comment 6•7 years ago
|
||
Here's the list of affected macOS versions:
10.10.0 14A238x
10.10.0 14A329r
10.10.0 14A299l
10.10.0 14A261i
10.10.0 14A329f
10.10.0 14A314h
10.10.0 14A283o
10.10.0 14A298i
All of these have a letter at the end, I think this mean that all of them are preview releases.
| Assignee | ||
Comment 7•7 years ago
|
||
Comment on attachment 9023437 [details]
Bug 1503424 - Null-check NSWorkspaceAccessibilityDisplayOptionsDidChangeNotification before using it in order to fix a startup crash on 10.10. r?hiro
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1486971
User impact if declined: Startup crash on 10.10 preview releases
Is this code covered by automated tests?: No
Has the fix been verified in Nightly?: No
Needs manual test from QE?: No
If yes, steps to reproduce:
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): just a null-check, should be zero risk
String changes made/needed:
Attachment #9023437 -
Flags: approval-mozilla-release?
Attachment #9023437 -
Flags: approval-mozilla-beta?
Comment 8•7 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #6)
> Here's the list of affected macOS versions:
>
> 10.10.0 14A238x
> 10.10.0 14A329r
> 10.10.0 14A299l
> 10.10.0 14A261i
> 10.10.0 14A329f
> 10.10.0 14A314h
> 10.10.0 14A283o
> 10.10.0 14A298i
>
> All of these have a letter at the end, I think this mean that all of them
> are preview releases.
That makes perfect sense! Thank you!
Updated•7 years ago
|
status-firefox64:
--- → affected
Comment 9•7 years ago
|
||
Comment on attachment 9023437 [details]
Bug 1503424 - Null-check NSWorkspaceAccessibilityDisplayOptionsDidChangeNotification before using it in order to fix a startup crash on 10.10. r?hiro
fix for startup crash on macos 10.10 preview releases, approved for 64.0b9
Attachment #9023437 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 10•7 years ago
|
||
| bugherder uplift | ||
Comment 11•7 years ago
|
||
Decently-high volume startup crash on release, probably worth tracking.
status-firefox-esr60:
--- → unaffected
tracking-firefox63:
--- → +
tracking-firefox64:
--- → +
tracking-firefox65:
--- → +
Comment 12•7 years ago
|
||
Comment on attachment 9023437 [details]
Bug 1503424 - Null-check NSWorkspaceAccessibilityDisplayOptionsDidChangeNotification before using it in order to fix a startup crash on 10.10. r?hiro
Crash fix for a startup crash on MacOS 10.10, approved for 63.0.3, thanks.
Attachment #9023437 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Comment 13•7 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•