Bug 1503424 - Null-check NSWorkspaceAccessibilityDisplayOptionsDidChangeNotification before using it in order to fix a startup crash on 10.10. r=hiro, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D11239